--- a/pccredit/templates/login1.html
+++ b/pccredit/templates/login1.html
@@ -25,17 +25,17 @@
 	<script type="text/javascript">
 		function dologin()
 		{
-			var username = document.getElementById("username").value;
-			if(username=="主管")
-			{
-				window.location.href='/welcome_zg';
-			}
-			else if(username=="客户经理"){
-				window.location.href='/welcome_khjl';
-			}
-			else if(username=="管理员"){
-				window.location.href='/welcome_gly';
-			}
+			// var username = document.getElementById("username").value;
+			// if(username=="主管")
+			// {
+			// 	window.location.href='/welcome_zg';
+			// }
+			// else if(username=="客户经理"){
+			window.location.href='/welcome_khjl';
+			// }
+			// else if(username=="管理员"){
+			// 	window.location.href='/welcome_gly';
+			// }
 		}
 	</script>
 </head>
