--- a/pccredit/templates/welcome_khjl.html
+++ b/pccredit/templates/welcome_khjl.html
@@ -56,7 +56,7 @@
 						</li>
 					</ul>
 					<ul class="nav" id="topmenu">
-						<li><a href="jjgl_khjl">进件管理</a></li>
+						<li><a href="jjgl_zg">进件管理</a></li>
 						<li><a href="yxgl_khjl">营销管理</a></li>
 						<li><a href="khgl_khjl">客户管理</a></li>												
 						<li><a href="zhfkgl_khjl">综合风控管理</a></li>											
